# simple-ujian-browser

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
.hermes/plans/: 2026-06-16_desktop-implementation.md
docs/: ARCHITECTURE.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: config.json
src-tauri/src/: config.rs  lib.rs
src-tauri/src/kiosk/: mod.rs  webview_setup.rs  windows.rs
tests/: kiosk-test.spec.js
